--- a/index.html
+++ b/index.html
@@ -1,16 +1,74 @@
 <html>
-  <head>
+
+<head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>Fiche Bénévoles FIFIG 2024</title>
     <script async src="https://tally.so/widgets/embed.js"></script>
     <style type="text/css">
-      html { margin: 0; height: 100%; overflow: hidden; }
-      iframe { position: absolute; top: 0; right: 0; bottom: 0; left: 0; border: 0; }
-      .square { position: absolute; right: 0; bottom: 0; background-color: #fff; width: 300px; height: 80px; z-index: 999; }
+        html {
+            margin: 0;
+            height: 100%;
+            overflow: hidden;
+        }
+
+        iframe {
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            border: 0;
+        }
+
+        body {
+            --font-family: '__Inter_aaf875', '__Inter_Fallback_aaf875';
+            font-family: var(--font-family), sans-serif;
+            font-size: 16px;
+        }
+
+        .square {
+            position: absolute;
+            right: 17px;
+            bottom: 17px;
+            background-color: #FFF;
+            width: 205px;
+            height: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: 1px solid #0000009c;
+            border-radius: 4px;
+        }
+
+        .square:hover {
+            background-color: #cacaca;
+            transition: all 0.3s ease-in-out;
+        }
+
+        a {
+            text-decoration: none;
+            color: #000;
+        }
+
+        @media screen and (max-width: 576px) {
+            .square {
+                width: 100vh;
+                bottom: 0;
+                height: 40px;
+                border: none;
+                border-radius: 0;
+            }
+        }
     </style>
-  </head>
-  <body>
-    <iframe data-tally-src="https://tally.so/r/mV000J?transparentBackground=1" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" title="Fiche Bénévoles FIFIG 2024"></iframe>
-    <div class="square"></div>
+</head>
+
+<body>
+    <iframe data-tally-src="https://tally.so/r/mV000J?transparentBackground=1" width="100%" height="100%"
+        frameborder="0" marginheight="0" marginwidth="0" title="Fiche Bénévoles FIFIG 2024"></iframe>
+    <div class="square">
+        <a href="https://www.filminsulaire.com">Retour au Site</a>
+        <a href="https://www.filminsulaire.com">Retour au Site</a>
+    </div>
 </body>
+
 </html>
