--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
 <body>
     <iframe data-tally-src="https://tally.so/r/mV000J?transparentBackground=1" width="100%" height="100%"
         frameborder="0" marginheight="0" marginwidth="0" title="Fiche Bénévoles FIFIG 2024"></iframe>
-    <div class="square">
-        <a href="https://www.filminsulaire.com">Retour au Site</a>
-        <a href="https://www.filminsulaire.com">Retour au Site</a>
-    </div>
+    <a href="https://www.filminsulaire.com">
+        <div class="square">
+            Retour au Site
+        </div>
+    </a>
 </body>
 
 </html>
