fix(button): fix width on mobile

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         @media screen and (max-width: 576px) {
             .square {
-                width: 100vh;
+                width: 100%;
                 bottom: 0;
                 height: 40px;
                 border: none;
