--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             --font-family: '__Inter_aaf875', '__Inter_Fallback_aaf875';
             font-family: var(--font-family), sans-serif;
             font-size: 16px;
+            position: relative;
         }
 
         .square {
