--- a/index.html
+++ b/index.html
@@ -53,11 +53,7 @@
 
         @media screen and (max-width: 576px) {
             .square {
-                width: 100%;
-                bottom: 0;
-                height: 40px;
-                border: none;
-                border-radius: 0;
+                display: none;
             }
         }
     </style>
